added first configurations to put socket in the server side and the client side

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <hr>
 
     <div id="g_id_onload"
-
+         data-client_id="88467175551-e0o30et055dht32blksestcp8s4s1jjd.apps.googleusercontent.com"
          data-auto_prompt="false"
          data-callback="handleCredentialResponse"
          >
